--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "es2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -21,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/s3-upload/route.js", "app/services/components/S3UploadForm.jsx", "app/services/page.jsx", "app/solutions/page.jsx", "app/Header.jsx", "app/Hero.jsx", "app/layout.jsx", "app/page.jsx"],
   "exclude": ["node_modules"]
 }
