--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/s3-upload/route.js", "app/services/components/S3UploadForm.jsx", "app/services/page.jsx", "app/solutions/page.jsx", "app/Header.jsx", "app/Hero.jsx", "app/layout.jsx", "app/page.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/s3-upload/route.js", "app/services/components/S3UploadForm.jsx", "app/service.jsx", "app/solutions/page.jsx", "app/Header.jsx", "app/Hero.jsx", "app/layout.jsx", "app/service.jsx"],
   "exclude": ["node_modules"]
 }
