--- a/APIs/requirements.txt
+++ b/APIs/requirements.txt
@@ -1,8 +1,17 @@
-fastapi==0.68.1
-uvicorn==0.15.0
-pydantic==1.9.0
-langchain-core==0.2.2
-langchain-community==0.1.0
-langchain==0.1.0
-boto3==1.18.67
-python-dotenv==0.19.2
+fastapi==0.111.0
+pydantic==2.7.1
+typing-extensions==4.12.1
+python-dotenv==1.0.1
+requests==2.32.3
+boto3==1.34.117
+botocore==1.34.117
+uvicorn==0.29.0
+langchain==0.2.1
+langchain-community==0.2.1
+langchain-core==0.2.3
+langchain-openai==0.1.8
+langchain-text-splitters==0.2.0
+unstructured==0.14.3
+unstructured-client==0.22.0
+unstructured[docx]
+chromadb==0.5.0
