--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
+    "@lighthouse-web3/sdk": "^0.3.3",
+    "@rainbow-me/rainbowkit": "^2.1.2",
+    "@tanstack/react-query": "^5.40.0",
     "aws-sdk": "^2.1632.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "ethers": "^5.7.2",
     "flowbite": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
@@ -23,6 +27,9 @@
     "react-dom": "^18",
     "react-typed": "^2.0.12",
     "typewriter-effect": "^2.21.0",
+    "viem": "^2.13.3",
+    "wagmi": "^2.9.8",
+    "web3modal": "^1.9.12",
     "zod": "^3.23.8"
   },
   "devDependencies": {
